<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/xulie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_shape_login"
        android:hint="@string/input_id"
        />
    <EditText 
        android:id="@+id/robot_serial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_serial_num"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/yes"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/yes" />

        <Button
            android:id="@+id/no"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/no" />
    </LinearLayout>

</LinearLayout>