<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bjsz"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/add_task_time"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:onClick="ondate"
            android:text="@string/choose_date" />

        <Button
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:onClick="ontime"
            android:text="@string/choose_time1" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/taskcontent"
        android:layout_marginBottom="70dp">

        <EditText
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button"
            android:ems="10"
            android:hint="@string/input_title_please"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/task_title"
            android:layout_centerVertical="true"
            android:background="@drawable/about"
            android:onClick="choose" />
    </RelativeLayout>

    <EditText
        android:id="@+id/taskcontent"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button"
        android:ems="10"
        android:hint="@string/intput_remind_content"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:background="@drawable/button"
        android:onClick="over"
        android:text="@string/complete" />
</RelativeLayout>