<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bjsz"
    tools:context=".AddTaskActivity" >

    <RelativeLayout
        android:id="@+id/tasks_title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/task_title_bg"
        android:padding="5dp" >
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:text="@string/back"/>

        <TextView
            android:id="@+id/add_task_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="@string/complete"/>
    </RelativeLayout>
    <View
        android:id="@+id/view_head"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/task_title_stroke"
        android:layout_below="@id/tasks_title"/>

    <FrameLayout
        android:id="@+id/content_task"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/view_head" >
    </FrameLayout>

</RelativeLayout>