<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/transparent">
        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/transparent">
            <com.yuntongxun.ecsdk.voip.video.ECCaptureView
                android:id="@+id/ec_capture_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <LinearLayout
                android:id="@+id/ll_container"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:background="@android:color/transparent"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_right_function"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:background="@android:color/transparent">
        <TextView
            android:id="@+id/tv_invite"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/style_tv_meeting_control3"
            android:drawableTop="@drawable/tv_invite"
            android:text="@string/invite"/>
        <TextView
            android:id="@+id/tv_mute"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/style_tv_meeting_control3"
            android:drawableTop="@drawable/tv_mute"
            android:text="@string/sound_off"/>
        <TextView
            android:id="@+id/tv_switch_camera"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/style_tv_meeting_control3"
            android:drawableTop="@drawable/tv_switch"
            android:text="@string/switch_camera"/>
        <TextView
            android:id="@+id/tv_hang_up"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/style_tv_meeting_control3"
            android:drawableTop="@drawable/tv_hangup"
            android:text="@string/hang_up"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_invite"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:visibility="gone"
        >
        <EditText
            android:id="@+id/et_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="inviteCancel"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/bt_invite_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bt_cancel"
            android:layout_alignParentBottom="true"
            android:onClick="inviteConfirm"
            android:text="@string/invite"/>
    </RelativeLayout>
</RelativeLayout>