<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bjsz"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/tasks_title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/task_title_bg"
        android:padding="5dp" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:gravity="center"
            android:onClick="back"
            android:text="@string/return1"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/remind_alarm"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="center"
            android:onClick="add"
            android:layout_marginRight="10dp"
            android:text="@string/add"
            android:textColor="@android:color/white" />
    </RelativeLayout>
    <View
        android:id="@+id/view_head"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/task_title_stroke"
        android:layout_below="@id/tasks_title"/>
    <RelativeLayout
        android:id="@+id/task_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_head"
        android:layout_above="@+id/task_bottom" >
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/task_bottom"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/taskitem_shape"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/reminditem"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/reminditem_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/tx"
                android:textColor="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reminditem_img"
                android:layout_centerHorizontal="true"
                android:text="@string/remind"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/alarmitem"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/alarmitem_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/nz"
                android:textColor="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alarmitem_img"
                android:layout_centerHorizontal="true"
                android:text="@string/alarm"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>